--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.12.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
