--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
