updated for student project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skwerel",
+  "name": "roster",
   "version": "1.0.0",
   "description": "Site allows user to save to a watchlist and have auto-notifications sent to them when items are available",
   "main": "index.js",
@@ -18,15 +18,7 @@
     "url": "git+https://github.com/ghgrave/Skwerel.git"
   },
   "keywords": [
-    "skwerel",
-    "movie.",
-    "movies",
-    "tv",
-    "shows",
-    "books",
-    "nest",
-    "nuts",
-    "watchlist"
+    "students"
   ],
   "author": "gHgraveDesigns@2021",
   "license": "ISC",
